--- a/lendarygames.com.html
+++ b/lendarygames.com.html
@@ -13,12 +13,28 @@
 
 <body>
   
-    <header>    
-    
-    <img class="logo" src="./logo.png" alt="">   
+    <header>
+      
+      <img class="logo" src="./logo.png" alt="">   
 
-  </header>    
+    </header>    
 
+    <main>
+
+<div class="containerimg"> 
+
+ 
+<img class="garoto" src="./Garoto jogando na Tv.png" alt="">
+
+</div>  
+<div class="containertext"> 
+
+
+<h1> Bem vindo </h1>
+
+</div>
+
+</main>
 </body>
 
 </html>
