--- a/lendarygames.com.html
+++ b/lendarygames.com.html
@@ -19,18 +19,25 @@
 
     </header>    
 
-    <main>
+    <main class="container">
 
-<div class="containerimg"> 
+
 
  
-<img class="garoto" src="./Garoto jogando na Tv.png" alt="">
+<img class="containerimg" src="./Garoto jogando na Tv.png" alt="">
 
-</div>  
-<div class="containertext"> 
+ 
+<div class="containertext">
+
+<h1> Bem vindo ao Legendary Games (LeGa)</h1>
+
+<h2> Aqui vocë encontra varios tipos de Jogos!  </h2>
+
+<h1> Jogo 1 </h1>
+<h1> Jogo 2 </h1>
+<h1> Jogo 3 </h1>
 
 
-<h1> Bem vindo </h1>
 
 </div>
 
